[project]
name = "xai-serpapi"
version = "0.1.0"
description = "SerpAPI Components for Searching the Web"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "git@github.com:XpressAI/xai-serpapi.git"
keywords = ["xircuits", "google", "bing", "serp", "duckduckgo", "yahoo"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
examples_path = "example.xircuits"
