[project]
name = "xai-serpapi"
version = "0.1.0"
description = "SerpAPI Components for Searching the Web"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-serpapi"
keywords = ["xircuits", "google", "bing", "serp", "duckduckgo", "yahoo"]

dependencies = [
    "serpapi==0.1.5",
]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/example.xircuits"
requirements_path = "requirements.txt"
